--- a/frontend/src/components/Home/index.css
+++ b/frontend/src/components/Home/index.css
@@ -1,9 +1,9 @@
 .home-container-left {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    max-height: 100vh;
-
+    /* min-height: 100vh;
+    max-height: 100vh; */
+    height:100vh;
 }
 
 /* home nav css */
