--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,7 +14,9 @@ body{
     margin:0px;
     padding:0px;
     /* min-height: 100vh; */
-    max-height: 100vh;
+    /* max-height: 100vh; */
+
+    overflow: overlay;
     overflow-y: hidden;
 
 }
@@ -28,4 +30,9 @@ html{
 
     margin:0px;
     padding:0px;
+}
+html, body, div, span, nav, ul, li, fieldset {
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
